--- a/frontend/src/app/login-form/login-form.component.html
+++ b/frontend/src/app/login-form/login-form.component.html
@@ -5,16 +5,19 @@
         <h2 class="text-uppercase title">Login</h2>
       </div>
       <div class="row">
-        <form>
+        <form (submit)="handleLogin()">
           <div class="form-group mb-2">
-            <label>Username</label>
-            <input type="text" class="form-control" placeholder="Username">
+            <label>User ID</label>
+            <input [(ngModel)]="username" name="username" type="text" class="form-control" placeholder="User ID">
           </div>
           <div class="form-group mb-2">
             <label>Password</label>
-            <input type="password" class="form-control" placeholder="Password">
+            <input [(ngModel)]="password" name="password" type="password" class="form-control" placeholder="Password">
           </div>
-          <button type="submit" class="btn btn-black float-end">Login</button>
+          <div>
+            <span *ngIf='invalidLogin' class="text-danger">{{errorMessage}}</span>
+            <button type="submit" class="btn btn-black float-end">Login</button>
+          </div>
         </form>
       </div>
     </div>
