--- a/frontend/src/app/login-form/login-form.component.html
+++ b/frontend/src/app/login-form/login-form.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="container">
   <div class="row justify-content-center ">
     <div class="col-md-6 col-sm-12">
