added logout function

--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,2 +1,4 @@
 <app-header></app-header>
-<p>welcome works!</p>
+<p>Welcome back, {{name}}!</p>
+<p>Username: {{username}}</p>
+<p>Role: {{role}}</p>
