--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,4 +1,21 @@
 <app-header></app-header>
-<p>Welcome back, {{name}}!</p>
-<p>Username: {{username}}</p>
-<p>Role: {{role}}</p>
+
+<section class="container">
+  <div class="row justify-content-center text-center">
+    <div class="col-md-6 col-sm-12">
+      <div class="row mb-4">
+        <h2 class="text-uppercase title">Welcome back, {{name}}!</h2>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-2">
+          <div class="row justify-content-end me-1 fw-bold">Username: </div>
+          <div class="row justify-content-end me-1 fw-bold">Role: </div>
+        </div>
+        <div class="col-md-2">
+          <div class="row">{{username}}</div>
+          <div class="row">{{role}}</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
