--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,14 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">Frontend App</a>
-    <div>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li *ngIf="authenticationService.isUserLoggedIn()" class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/welcome" routerLinkActive="active">Welcome</a>
+        </li>
+        <li *ngIf="authenticationService.isUserManager()" class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/restricted" routerLinkActive="active">Dashboard</a>
+        </li>
+      </ul>
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li *ngIf="!authenticationService.isUserLoggedIn()" class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/login">Login</a>
+            <a class="nav-link" aria-current="page" routerLink="/login" routerLinkActive="active">Login</a>
           </li>
           <li *ngIf="authenticationService.isUserLoggedIn()" class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/logout">Logout</a>
+            <a class="nav-link" aria-current="page" routerLink="/logout" routerLinkActive="active">Logout</a>
           </li>
         </ul>
       </div>
