--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -1,15 +1,16 @@
 <app-header></app-header>
+<app-language></app-language>
 
 <section class="container">
   <div class="row justify-content-center text-center">
     <div class="col-md-6 col-sm-12">
       <div class="row mb-4">
-        <h2 class="text-uppercase title">Welcome back, {{name}}!</h2>
+        <h2 class="text-uppercase title">{{'Welcome back,' | translate}} {{name}}!</h2>
       </div>
       <div class="row justify-content-center">
         <div class="col-md-2">
-          <div class="row justify-content-end me-1 fw-bold">Username: </div>
-          <div class="row justify-content-end me-1 fw-bold">Role: </div>
+          <div class="row justify-content-end me-1 fw-bold">{{'Username' | translate}}: </div>
+          <div class="row justify-content-end me-1 fw-bold">{{'Role' | translate}}: </div>
         </div>
         <div class="col-md-2">
           <div class="row">{{username}}</div>
