--- a/frontend/src/app/restricted/restricted.component.html
+++ b/frontend/src/app/restricted/restricted.component.html
@@ -1,9 +1,10 @@
 <app-header></app-header>
+<app-language></app-language>
 
 <div class="container">
   <div class="row justify-content-center text-center text-uppercase">
-    <h1>Welcome to the Managers' Dashboard!</h1>
+    <h1>{{'Dashboard Title' | translate}}</h1>
     <img class="pb-5" src="./assets/img/stocks.png" alt="Graph"/>
-    <p class="fst-italic">This page is restricted for accounts with "Manager" role only. Other roles will not be able to access/view this page.</p>
+    <p>{{'Dashboard Fine Print' | translate}}</p>
   </div>
 </div>
