--- a/frontend/src/app/login-form/login-form.component.html
+++ b/frontend/src/app/login-form/login-form.component.html
@@ -18,7 +18,7 @@
             <input [(ngModel)]="password" name="password" type="password" class="form-control" placeholder="{{'Password' | translate}}">
           </div>
           <div>
-            <span *ngIf='invalidLogin' class="text-danger">{{errorMessage}}</span>
+            <span *ngIf='invalidLogin' class="text-danger">{{'Invalid login' | translate}}</span>
             <button type="submit" class="btn btn-black float-end">{{'Login' | translate}}</button>
           </div>
         </form>
