--- a/frontend/src/app/welcome/welcome.component.html
+++ b/frontend/src/app/welcome/welcome.component.html
@@ -17,6 +17,9 @@
           <div class="row">{{role}}</div>
         </div>
       </div>
+      <div class="row justify-content-center mt-5">
+        <a class="btn btn-black" routerLink="/restricted">{{'View Dashboard' | translate}}</a>
+      </div>
     </div>
   </div>
 </section>
