changed translation selection for chinese

--- a/frontend/src/app/language/language.component.html
+++ b/frontend/src/app/language/language.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-1 offset-md-11 justify-content-end">
       <select class="form-select" (change)="changeLang($any($event.target).value)">
         <option value="en" [selected]="lang == 'en'">English</option>
-        <option value="ch" [selected]="lang == 'ch'">Chinese</option>
+        <option value="ch" [selected]="lang == 'ch'">中文</option>
       </select>
     </div>
   </div>
